Projects section added

--- a/src/index.html
+++ b/src/index.html
@@ -159,7 +159,78 @@
           </div>
         </div>
       </div>
-      <div class="h-screen"></div>
+
+      <!-- Projects -->
+      <div class="p-8 md:p-6 flex flex-col items-center min-h-screen">
+        <div class="mt-10 mb-10">
+          <p>OUR LATEST PROJECTS</p>
+          <p>CLICK IMAGE FOR MORE INFO</p>
+        </div>
+        <div
+          style="max-width: 1300px"
+          class="
+            flex flex-col
+            lg:flex-row
+            w-full
+            items-center
+            lg:justify-around
+          "
+        >
+          <!-- Project 1 -->
+          <div class="md:w-4/4 lg:w-80">
+            <img
+              src="https://www.esan.edu.pe/apuntes-empresariales/2019/05/09/1500x844_project_finance.jpg"
+              alt=""
+              class="rounded-md h-56 mb-4 md:w-full md:h-full lg:h-56"
+            />
+            <p class="mb-3">FIRST PROJECT</p>
+            <p class="mb-5">
+              Noster erroribus et est. Ignota dissentias usu an. His deserunt
+              tincidunt maiestatis ex, mei malis ubique mediocritatem an. Te eum
+              similique accommodare, et his rebum constituto quaerendum.
+            </p>
+            <button class="text-white bg-red-400 w-28 h-8 mb-12">
+              MORE INFO
+            </button>
+          </div>
+
+          <!-- Project 2 -->
+          <div class="md:w-4/4 lg:w-80">
+            <img
+              src="https://www.esan.edu.pe/apuntes-empresariales/2019/05/09/1500x844_project_finance.jpg"
+              alt=""
+              class="rounded-md h-56 mb-4 md:w-full md:h-full lg:h-56"
+            />
+            <p class="mb-3">SECOND PROJECT</p>
+            <p class="mb-5">
+              Noster erroribus et est. Ignota dissentias usu an. His deserunt
+              tincidunt maiestatis ex, mei malis ubique mediocritatem an. Te eum
+              similique accommodare, et his rebum constituto quaerendum.
+            </p>
+            <button class="text-white bg-red-400 w-28 h-8 mb-12">
+              MORE INFO
+            </button>
+          </div>
+
+          <!-- Project 3 -->
+          <div class="md:w-4/4 lg:w-80">
+            <img
+              src="https://www.esan.edu.pe/apuntes-empresariales/2019/05/09/1500x844_project_finance.jpg"
+              alt=""
+              class="rounded-md h-56 mb-4 md:w-full md:h-full lg:h-56"
+            />
+            <p class="mb-3">THIRD PROJECT</p>
+            <p class="mb-5">
+              Noster erroribus et est. Ignota dissentias usu an. His deserunt
+              tincidunt maiestatis ex, mei malis ubique mediocritatem an. Te eum
+              similique accommodare, et his rebum constituto quaerendum.
+            </p>
+            <button class="text-white bg-red-400 w-28 h-8 mb-12">
+              MORE INFO
+            </button>
+          </div>
+        </div>
+      </div>
     </div>
     <!-- Glide.js (slider) -->
     <script src="https://unpkg.com/@glidejs/glide"></script>
