--- a/src/index.html
+++ b/src/index.html
@@ -413,7 +413,90 @@
       </div>
     </div>
 
-    <footer style="background-color: #171a1f" class="h-screen"></footer>
+    <footer style="background-color: #171a1f" class="flex flex-col">
+      <div class="px-7 mt-7 flex flex-col md:flex-row justify-around">
+        <div class="flex flex-col">
+          <p class="tracking-wider text-white">CATEGORIES</p>
+          <p class="mt-3 tracking-wide text-gray-400">Articles</p>
+          <p class="mt-2 tracking-wide text-gray-400">Business</p>
+          <p class="mt-2 tracking-wide text-gray-400">Events</p>
+          <p class="mt-2 tracking-wide text-gray-400">Fashion</p>
+          <p class="mt-2 tracking-wide text-gray-400">Photos</p>
+          <p class="mt-2 tracking-wide text-gray-400">Social Media</p>
+        </div>
+
+        <div class="flex flex-col">
+          <p class="mt-20 text-white">RECENT POSTS</p>
+          <p class="mt-3 tracking-wide text-gray-400">Urban life</p>
+          <p class="text-gray-600">01/01/01</p>
+          <p class="mt-2 tracking-wide text-gray-400">On the way home</p>
+          <p class="text-gray-600">01/01/01</p>
+          <p class="mt-2 tracking-wide text-gray-400">New workplace</p>
+          <p class="text-gray-600">01/01/01</p>
+          <p class="mt-2 tracking-wide text-gray-400">Healthy breakfast</p>
+          <p class="text-gray-600">01/01/01</p>
+        </div>
+
+        <div class="flex flex-col">
+          <p class="mt-20 text-white">PHOTOS</p>
+          <div class="flex flex-wrap items-center w-11/12 md:w-64">
+            <div class="mr-3 h-14 w-14 bg-blue-400"></div>
+            <div class="mr-3 h-14 w-14 bg-gray-400"></div>
+            <div class="mr-3 h-14 w-14 bg-red-400"></div>
+            <div class="mr-3 h-14 w-14 bg-yellow-400"></div>
+            <div class="mr-3 h-14 w-14 bg-green-400"></div>
+            <div class="mr-3 h-14 w-14 bg-white"></div>
+            <div class="mr-3 h-14 w-14 bg-purple-400"></div>
+            <div class="h-14 w-14 bg-red-900"></div>
+          </div>
+        </div>
+
+        <div class="flex flex-col">
+          <p class="mt-20 text-white">TAGS</p>
+          <div class="flex flex-wrap items-center w-11/12 md:w-64">
+            <div
+              class="
+                flex
+                text-sm text-gray-400
+                px-3
+                h-8
+                mr-3
+                items-center
+                border
+                rounded-sm
+              "
+            >
+              BUSINESS
+            </div>
+            <div class="mr-3 h-14 w-14 bg-gray-400"></div>
+            <div class="mr-3 h-14 w-14 bg-red-400"></div>
+            <div class="mr-3 h-14 w-14 bg-yellow-400"></div>
+            <div class="mr-3 h-14 w-14 bg-green-400"></div>
+            <div class="mr-3 h-14 w-14 bg-white"></div>
+            <div class="mr-3 h-14 w-14 bg-purple-400"></div>
+            <div class="h-14 w-14 bg-red-900"></div>
+          </div>
+        </div>
+      </div>
+      <div
+        style="background-color: #11151c"
+        class="
+          mt-16
+          px-8
+          flex
+          h-16
+          w-full
+          items-center
+          bg-gray-900
+          justify-center
+          md:justify-start
+        "
+      >
+        <p style="font-size: 0.75rem" class="font-semibold text-gray-400">
+          © 2021 - EDUCATION PURPOSES ONLY
+        </p>
+      </div>
+    </footer>
 
     <!-- Glide.js (slider) -->
     <script src="https://unpkg.com/@glidejs/glide"></script>
@@ -421,6 +504,7 @@
       const sliders = document.querySelectorAll(".glide");
       const conf = {
         autoplay: 5000,
+        gap: 0,
       };
       sliders.forEach((item) => {
         new Glide(item, conf).mount();
